# EnDiPlot

./: .gitignore  LICENSE.md  README.md  chemplots.py  requirements.txt  setup.cfg  setup.py  utils_plot.py
data/: opt.inp
endiplot/: utils_io.py  utils_plot.py
scripts/: chemplots.py
tests/: opt.inp
utils/: general.py  gibbs_diagram.py
