# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = endiplot
version = 0.0.1
description = Easy plotting of energy diagrams for reaction mechanisms using matplotlib
author = Philipp Huber
license = "MIT"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
# Change if running only on Windows, Mac or Linux (comma-separated)
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =.

# Add dependencies of your project (semicolon/line-separated):
install_requires =
    matplotlib==3.7.4
    numpy==1.24.4

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
max-line-length = 88
extend-ignore = E203, E501

[semantic_release]
# branch = "release"
# upload_to_pypi=true
# upload_to_release=true
# commit_message= "{version} [skip ci]"

version_variable = "setup.cfg:version"

build_command = "python -m build"